# Citril

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
docs/: CODEX_BRIEF.md  INSTALL.md  LIBRARIES.md
editor/vscode/citril-language-support/: README.md  package.json
editor/vscode/citril-language-support/syntaxes/: citril.tmLanguage.json
examples/: basics.citril  library_demo.citril
include/citril/: ast.hpp  environment.hpp  error.hpp  interpreter.hpp  lexer.hpp  parser.hpp  token.hpp  value.hpp
libraries/: print_library.cpp
src/: environment.cpp  interpreter.cpp  lexer.cpp  parser.cpp  sample_library.cpp  strings_library.cpp  time_library.cpp  types_library.cpp
tests/: basic.cpp
